--- a/index.html
+++ b/index.html
@@ -389,9 +389,30 @@ $.edbox.close();
 
 		<div>
 			<p><b>Eduardo Moreno</b><br>Front-end developer and Webdesiger director</p>
-			<p><a href="http://edumoreno.com.br" class="link">http://edumoreno.com.br</a></p>
-			<p><img src="images/icon-facebook.png" alt="Facebook" class="icon"/> <a href="https://www.facebook.com/eduardomoreno81" class="link" target="_blank">facebook.com/eduardomoreno81</a></p>
-			<p><img src="images/icon-linkedin.png" alt="Linkedin" class="icon"/> <a href="http://lnkd.in/59e_uq" class="link" target="_blank">lnkd.in/59e_uq</a></p>
+			<p>
+				<img src="images/icon-portfolio.png" alt="Porftolio" class="icon"/>
+				<a href="http://edumoreno.com.br" class="link">
+					http://edumoreno.com.br
+				</a>
+			</p>
+			<p>
+				<img src="images/icon-github.png" alt="Github" class="icon"/>
+				<a href="https://github.com/eduardocmoreno/edslider" class="link" target="_blank">
+					github.com/eduardocmoreno/edslider
+				</a>
+			</p>
+			<p>
+				<img src="images/icon-facebook.png" alt="Facebook" class="icon"/>
+				<a href="https://www.facebook.com/eduardomoreno81" class="link" target="_blank">
+					facebook.com/eduardomoreno81
+				</a>
+			</p>
+			<p>
+				<img src="images/icon-linkedin.png" alt="Linkedin" class="icon"/>
+				<a href="http://lnkd.in/59e_uq" class="link" target="_blank">
+					lnkd.in/59e_uq
+				</a>
+			</p>
 		</div>
 
 		<hr/>
